// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CollectReward should render on Android 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CollectReward
    onPress={[MockFunction]}
    yucoin={20}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <CenteredScreen
        style={
          Object {
            "justifyContent": "center",
          }
        }
      >
        <CoinConfetti
          coins={20}
          isExpanded={true}
        />
        <Pad
          height={8}
        />
        <View
          style={
            Object {
              "height": 50,
            }
          }
        />
        <Pad
          height={14}
        />
        <Button
          label="collect"
          onPress={[MockFunction]}
          type="PrimarySmall"
        />
        <Pad
          height={50}
        />
      </CenteredScreen>,
      "style": Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <CoinConfetti
            coins={20}
            isExpanded={true}
          />,
          <Pad
            height={8}
          />,
          <View
            style={
              Object {
                "height": 50,
              }
            }
          />,
          <Pad
            height={14}
          />,
          <Button
            label="collect"
            onPress={[MockFunction]}
            type="PrimarySmall"
          />,
          <Pad
            height={50}
          />,
        ],
        "style": Object {
          "justifyContent": "center",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "coins": 20,
            "isExpanded": true,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 8,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": null,
            "style": Object {
              "height": 50,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 14,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "label": "collect",
            "onPress": [MockFunction],
            "type": "PrimarySmall",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 50,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <CenteredScreen
          style={
            Object {
              "justifyContent": "center",
            }
          }
        >
          <CoinConfetti
            coins={20}
            isExpanded={true}
          />
          <Pad
            height={8}
          />
          <View
            style={
              Object {
                "height": 50,
              }
            }
          />
          <Pad
            height={14}
          />
          <Button
            label="collect"
            onPress={[MockFunction]}
            type="PrimarySmall"
          />
          <Pad
            height={50}
          />
        </CenteredScreen>,
        "style": Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            <CoinConfetti
              coins={20}
              isExpanded={true}
            />,
            <Pad
              height={8}
            />,
            <View
              style={
                Object {
                  "height": 50,
                }
              }
            />,
            <Pad
              height={14}
            />,
            <Button
              label="collect"
              onPress={[MockFunction]}
              type="PrimarySmall"
            />,
            <Pad
              height={50}
            />,
          ],
          "style": Object {
            "justifyContent": "center",
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "coins": 20,
              "isExpanded": true,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "height": 8,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": null,
              "style": Object {
                "height": 50,
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "height": 14,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "label": "collect",
              "onPress": [MockFunction],
              "type": "PrimarySmall",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "height": 50,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`CollectReward should render on iOS 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CollectReward
    onPress={[MockFunction]}
    yucoin={20}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <CenteredScreen
        style={
          Object {
            "justifyContent": "center",
          }
        }
      >
        <CoinConfetti
          coins={20}
          isExpanded={true}
        />
        <Pad
          height={8}
        />
        <View
          style={
            Object {
              "height": 50,
            }
          }
        />
        <Pad
          height={14}
        />
        <Button
          label="collect"
          onPress={[MockFunction]}
          type="PrimarySmall"
        />
        <Pad
          height={100}
        />
      </CenteredScreen>,
      "style": Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <CoinConfetti
            coins={20}
            isExpanded={true}
          />,
          <Pad
            height={8}
          />,
          <View
            style={
              Object {
                "height": 50,
              }
            }
          />,
          <Pad
            height={14}
          />,
          <Button
            label="collect"
            onPress={[MockFunction]}
            type="PrimarySmall"
          />,
          <Pad
            height={100}
          />,
        ],
        "style": Object {
          "justifyContent": "center",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "coins": 20,
            "isExpanded": true,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 8,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": null,
            "style": Object {
              "height": 50,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 14,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "label": "collect",
            "onPress": [MockFunction],
            "type": "PrimarySmall",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 100,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <CenteredScreen
          style={
            Object {
              "justifyContent": "center",
            }
          }
        >
          <CoinConfetti
            coins={20}
            isExpanded={true}
          />
          <Pad
            height={8}
          />
          <View
            style={
              Object {
                "height": 50,
              }
            }
          />
          <Pad
            height={14}
          />
          <Button
            label="collect"
            onPress={[MockFunction]}
            type="PrimarySmall"
          />
          <Pad
            height={100}
          />
        </CenteredScreen>,
        "style": Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            <CoinConfetti
              coins={20}
              isExpanded={true}
            />,
            <Pad
              height={8}
            />,
            <View
              style={
                Object {
                  "height": 50,
                }
              }
            />,
            <Pad
              height={14}
            />,
            <Button
              label="collect"
              onPress={[MockFunction]}
              type="PrimarySmall"
            />,
            <Pad
              height={100}
            />,
          ],
          "style": Object {
            "justifyContent": "center",
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "coins": 20,
              "isExpanded": true,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "height": 8,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": null,
              "style": Object {
                "height": 50,
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "height": 14,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "label": "collect",
              "onPress": [MockFunction],
              "type": "PrimarySmall",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "height": 100,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`CollectReward should render with heading 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CollectReward
    date="12-15 Blerguary"
    onPress={[MockFunction]}
    yucoin={20}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <CenteredScreen
        style={
          Object {
            "justifyContent": "center",
          }
        }
      >
        <CoinConfetti
          coins={20}
          isExpanded={true}
        />
        <Pad
          height={8}
        />
        <View
          style={
            Object {
              "height": 50,
            }
          }
        >
          <Heading
            bold={true}
            label="12-15 Blerguary"
            size="small"
          />
        </View>
        <Pad
          height={14}
        />
        <Button
          label="collect"
          onPress={[MockFunction]}
          type="PrimarySmall"
        />
        <Pad
          height={50}
        />
      </CenteredScreen>,
      "style": Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <CoinConfetti
            coins={20}
            isExpanded={true}
          />,
          <Pad
            height={8}
          />,
          <View
            style={
              Object {
                "height": 50,
              }
            }
          >
            <Heading
              bold={true}
              label="12-15 Blerguary"
              size="small"
            />
          </View>,
          <Pad
            height={14}
          />,
          <Button
            label="collect"
            onPress={[MockFunction]}
            type="PrimarySmall"
          />,
          <Pad
            height={50}
          />,
        ],
        "style": Object {
          "justifyContent": "center",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "coins": 20,
            "isExpanded": true,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 8,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Heading
              bold={true}
              label="12-15 Blerguary"
              size="small"
            />,
            "style": Object {
              "height": 50,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "bold": true,
              "label": "12-15 Blerguary",
              "size": "small",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 14,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "label": "collect",
            "onPress": [MockFunction],
            "type": "PrimarySmall",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 50,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <CenteredScreen
          style={
            Object {
              "justifyContent": "center",
            }
          }
        >
          <CoinConfetti
            coins={20}
            isExpanded={true}
          />
          <Pad
            height={8}
          />
          <View
            style={
              Object {
                "height": 50,
              }
            }
          >
            <Heading
              bold={true}
              label="12-15 Blerguary"
              size="small"
            />
          </View>
          <Pad
            height={14}
          />
          <Button
            label="collect"
            onPress={[MockFunction]}
            type="PrimarySmall"
          />
          <Pad
            height={50}
          />
        </CenteredScreen>,
        "style": Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            <CoinConfetti
              coins={20}
              isExpanded={true}
            />,
            <Pad
              height={8}
            />,
            <View
              style={
                Object {
                  "height": 50,
                }
              }
            >
              <Heading
                bold={true}
                label="12-15 Blerguary"
                size="small"
              />
            </View>,
            <Pad
              height={14}
            />,
            <Button
              label="collect"
              onPress={[MockFunction]}
              type="PrimarySmall"
            />,
            <Pad
              height={50}
            />,
          ],
          "style": Object {
            "justifyContent": "center",
          },
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "coins": 20,
              "isExpanded": true,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "height": 8,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Heading
                bold={true}
                label="12-15 Blerguary"
                size="small"
              />,
              "style": Object {
                "height": 50,
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "bold": true,
                "label": "12-15 Blerguary",
                "size": "small",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "height": 14,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "label": "collect",
              "onPress": [MockFunction],
              "type": "PrimarySmall",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "height": 50,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
